k8s/freeipa.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freeipa-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: freeipa
  template:
    metadata:
      labels:
        app: freeipa
    spec:
      containers:
        - name: freeipa
          image: freeipa/freeipa-server:fedora-30
          resources:
            requests:
              memory: "1024Mi"
              cpu: "100m"
            limits:
              memory: "1200Mi"
              cpu: "500m"
          # readinessProbe:
          #   exec:
          #     command: [ "/usr/bin/systemctl", "status", "ipa" ]
          #   initialDelaySeconds: 60
          #   timeoutSeconds: 10
          #   periodSeconds: 10
          #   successThreshold: 1
          #   failureThreshold: 3
          ports:
          - containerPort: 80
            protocol: TCP
          - containerPort: 443
            protocol: TCP
          - containerPort: 53
            protocol: UDP
          - containerPort: 88
            protocol: TCP
          - containerPort: 88
            protocol: UDP
          volumeMounts:
          - mountPath: /data
            name: freeipa-data
            subPath: data
          - name: cgroups
            mountPath: /sys/fs/cgroup
            readOnly: true
          - mountPath: /usr/share/ipa/ipa-rewrite.conf.template
            name: freeipa-httpd-config
            subPath: ipa-rewrite.conf.template
          imagePullPolicy: IfNotPresent
      volumes:
      - name: freeipa-data
        hostPath:
        persistentVolumeClaim:
          claimName: freeipa-pvc
      - name: cgroups
        hostPath:
          path: /sys/fs/cgroup
      - name: freeipa-httpd-config
        configMap:
            name: freeipa-httpd-config
            items:
              - key: ipa-rewrite.conf.template
                path: ipa-rewrite.conf.template
---
apiVersion: v1
kind: Service
metadata:
  name: freeipa-service
spec:
  ports:
  - port: 80
    targetPort: 80
    name: tcp
  selector:
    app: freeipa
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: freeipa-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  tls:
    - secretName: internal-acme-crt-secret
      hosts:
        - '*.internal.lazz.tech'
  rules:
  - host: ipa.internal.lazz.tech
    http:
      paths:
      - backend:
          serviceName: freeipa-service
          servicePort: 80
